2001-12-22  Jeff Freedman  <jeff@amy.nerble.net>

	* npcnear.cc: Sleeping monsters shouldn't attack until awakened.
	* usecode/intrinsics.cc,gamewin.cc,gamewin.h: Added 'armageddon' flag.

2001-12-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.am: really fixed subdir order now... (data depends on tools)

2001-12-21  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc (Dragging_info): Use remove_this(true) to remove obj.
	* paths.cc (Offscreen_pathfinder_client): Fast_pathfinder checks lift.
	* actors.cc: remove_this(): Don't delete schedule.
	* actors.cc: move():  If entering world, set dormant.

2001-12-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/*.shp, Makefile.*, flx.in: removed text button shapes
	* gumps/Enabled_button.*: Text button for picking enabled/disabled
	* AudioOptions_gump.cc, VideoOptions_gump.cc, GameplayOptions_gump.cc, Newfile_gump.cc: use Text_button instead of text button shapes.
	* VideoOptions_gump.cc: added support for custom resolutions
	* GameplayOptions_gump.cc: added support for custom framerates	
	* Gump_ToggleTextButton.h: minor bug fix
	* Makefile.am: removed --all-static from link line
	* data/sav*.shp: replaced wrong black by right black

2001-12-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/u7shp.c: use new and improved palette in gimp plugin

2001-12-21  Max Horn  <max@quendi.de>

	* Makefile.am: fixed subdirs order to allow building from scratch

	* config.h.in, configure.in, conf/Configuration.cc: only use sstream on systems
	where this header is actually present

	* files/zip/unzip.c: fixed compiler warnings (ambigious 'else' statments)

	* configure.in: fixed output at end of configure run to do what it is
	supposed to (e.g. print out the SDL version instead of "sdl-config --version").

2001-12-21  Ryan Nunn  <triforce@merlin.net.au>
	* combat.cc, drag.cc, conf/Configuration.* : Warnings and errors